docs: add vitepress documentation site with LLM support

--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "publish:jsr": "bun run build && npx jsr publish",
     "version:patch": "bun pm version patch",
     "version:minor": "bun pm version minor",
-    "version:major": "bun pm version major"
+    "version:major": "bun pm version major",
+    "docs:dev": "bun run --cwd docs dev",
+    "docs:build": "bun run --cwd docs build",
+    "docs:preview": "bun run --cwd docs preview"
   },
   "keywords": [
     "ink",
